--- a/WepApi/appsettings.json
+++ b/WepApi/appsettings.json
@@ -3,7 +3,8 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WepApi-DCA29BF0-32A2-47C0-B04D-D34328A82BE2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
-    "Secret":"JLA45$%*KIL.$JWBLUIA++@JSOSNAM$H"
+    "Secret": "JLA45$%*KIL.$JWBLUIA++@JSOSNAM$H",
+    "TokenLifeTime":  "01:00:00"
   },
   "Logging": {
     "LogLevel": {
