--- a/WepApi/appsettings.json
+++ b/WepApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WepApi-DCA29BF0-32A2-47C0-B04D-D34328A82BE2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=VotingDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "Secret": "JLA45$%*KIL.$JWBLUIA++@JSOSNAM$H",
