--- a/FrontEnd/voting-app/package.json
+++ b/FrontEnd/voting-app/package.json
@@ -6,6 +6,8 @@
     "cra-template": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.5.13",
+    "react-query-devtools": "^2.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
